Bug 139948 - FILEOPEN: RTF: borders in table not displayed
Summary: FILEOPEN: RTF: borders in table not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: filter:rtf
: 104345 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-01-27 19:16 UTC by pleswi
Modified: 2022-04-26 12:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
RTF file and screenshots (153.86 KB, application/x-zip-compressed)
2021-01-27 19:16 UTC, pleswi
Details
sample file (48.07 KB, application/rtf)
2021-01-28 09:46 UTC, Xisco Faulí
Details
border between testcases (rtf, docx, doc) (12.28 KB, application/x-zip-compressed)
2022-03-21 11:26 UTC, Vasily Melenchuk (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pleswi 2021-01-27 19:16:23 UTC
Created attachment 169194 [details]
RTF file and screenshots

Hi,
we download file from our internet banking with daily operations. For better orientations we need line between  rows. But LibreOffice not show this lines. Please see screenshots from MS Office and compare with LibreOffice. I attach rtf file too.
Comment 1 Xisco Faulí 2021-01-28 09:46:18 UTC
Reproduced in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: f2389a70da606768a39ee599de6a5b24058734aa
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 5.7; Render: default; 

and

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 2 Xisco Faulí 2021-01-28 09:46:36 UTC
Created attachment 169219 [details]
sample file
Comment 3 Vasily Melenchuk (CIB) 2022-03-21 11:26:01 UTC
Created attachment 179004 [details]
border between testcases (rtf, docx, doc)

Given files are using border between feature of Microsoft text formats. And it seems *completely unsupported* in LO.

See specs for \brdrbtw (RTF), <w:between> (DOCX: ECMA-376, § 17.3.1.5).

In attachment there are minimized files (RTF, DOC, DOCX) for this feature. They are showing border between 2 paragraphs in MS Word, but LO can't display it.

Theoretically emulation of this feature is possible on filter level. Or it should be implemented as a writer core feature?
Comment 4 Commit Notification 2022-04-05 13:51:25 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e3a996bf72a16f5b22e6ff021745af5cec70a632

tdf#139948: docx and rtf import: emulate border in between

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Vasily Melenchuk (CIB) 2022-04-05 14:03:03 UTC
With provided above patch border in between is emulated with usage of top borders of affected paragraphs. It is not ideal solution but seems better than complete ignorance of this type of borders and losing this info on save/export.

Patch should affect RTF & DOCX formats. Binary DOC still missing this feature.

It will make sense to think on implementation of this feature on writer core level. But this also require changes in borders UI, extending ODT, etc.

Meanwhile I assume this bug as fixed.
Comment 6 Vasily Melenchuk (CIB) 2022-04-05 14:06:15 UTC
*** Bug 104345 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2022-04-26 12:21:41 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/537b2616b9c8639b2f1108047f39693ac6bd5500

tdf#139948: docx and rtf import: emulate border in between

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.