tdf#139948: docx and rtf import: emulate border in between

Writer does not support border in between available in all MS
formats. Since this feature is missing in core it will be
better to emulate it with top borders than to ignore it
completely.

Change-Id: I4e5a99cde5908066c4bb483136cfe9a1316df53c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132429
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit e3a996bf72a16f5b22e6ff021745af5cec70a632)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132594
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>