writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -1144,6 +1144,9 @@ public:
     /// start/end node.
     void ClearPreviousParagraph();
 
+    /// Check if previous paragraph has borders in between and do the border magic to it if so
+    bool handlePreviousParagraphBorderInBetween() const;
+
     /// Handle redline text portions in a frame, footnotes and redlines:
     /// store their data, and create them after frame creation or footnote/endnote copying
     bool m_bIsActualParagraphFramed;
