writerfilter/source/dmapper/PropertyIds.hxx
@@ -361,6 +361,7 @@ enum PropertyIds
         ,PROP_GUTTER_MARGIN
         ,PROP_RTL_GUTTER
         ,PROP_CURSOR_NOT_IGNORE_TABLES_IN_HF
+        ,PROP_PARA_CONNECT_BORDERS
     };
 
 //Returns the UNO string equivalent to eId.
